# CODES-Benchmark

./: .buildinfo  .flake8  .gitattributes  .gitignore  .readthedocs.yml  AGENT.md  README.md  TODO.md  benchmark.py  codes.benchmark.html  codes.html  codes.surrogates.AbstractSurrogate.html  codes.surrogates.html  codes.train.html  codes.tune.html  codes.utils.html  config.yaml  config_full.yaml  create_simple_ode_data.py  display_study_in_browser.py  env_setup.py  generate_simple_ode_data.py  genindex.html  index.html  logfile  main.py  make_new_dataset.py  mkdocs.yml  modules.html  objects.inv  optuna_latent_poly.py  paper_eval.py  paper_plots.py  profiling.py  py-modindex.html  pyproject.toml  pyproject_old.toml  pytest.ini  requirements.txt  run_benchmark.py  (+11 more)
.doctrees/: codes.benchmark.doctree  codes.doctree  codes.surrogates.AbstractSurrogate.doctree  codes.surrogates.doctree  codes.train.doctree  codes.tune.doctree  codes.utils.doctree  environment.pickle  index.doctree  modules.doctree
.github/workflows/: ci.yaml
DeepONet/: deeponet.py  multionet_interpolation_training.py  plotting.py  train_multionet.py  train_utils.py
_sources/: codes.surrogates.AbstractSurrogate.rst  codes.surrogates.rst  codes.tune.rst  index.rst
benchmark/: __init__.py  bench_fcts.py  bench_plots.py  bench_utils.py
codes/: __init__.py
codes/benchmark/: __init__.py  bench_fcts.py  bench_plots.py  bench_utils.py
codes/dataset/: data_plots.py  data_utils.py
codes/surrogates/: __init__.py  surrogate_classes.py  surrogates.py
codes/train/: __init__.py  mpi_utils.py  train_fcts.py
codes/tune/: __init__.py  evaluate_study.py  evaluate_tuning.py  optuna_config.yaml  optuna_fcts.py  optuna_mpi.py  postgres_fcts.py  tune_utils.py
codes/utils/: __init__.py  data_utils.py  utils.py
configs/train_eval/: config_minimal.yaml  config_minimal_evals.yaml
configs/tuning/: sqlite_quickstart.yaml
data/: __init__.py  analyse_dataset.py  data_sources.yaml  data_utils.py  dataloader.py  osu_chemicals.py
data/branca24/: data.hdf5
data/lorenzo_data/: lorenzo_data_small.npy  lorenzo_data_utils.py
data/lotka_volterra/: data.hdf5
data/osu2008/: data.hdf5  osu_chemicals.py  surrogate_config.py  surrogates_config.py
data/osu_data/: osu_chemicals.py
data/simple_ode/: data.hdf5
data/simple_reaction/: data.hdf5
data_gen/: __init__.py  generate_simple_ode_data.py  make_new_dataset.py
datasets/: data_sources.yaml
datasets/_data_analysis/: __init__.py  analyse_all_datasets.py  analyse_dataset.py  analyse_dataset_loop.py  data_plots.py  dataset_dict.py
datasets/_data_generation/: generate_data.py  generate_simple_ode_data.py  make_new_dataset.py  odes.py  update_timesteps.py
datasets/branca24/: surrogates_config.py
datasets/branca_large_myr/: surrogates_config.py
datasets/branca_norad/: surrogates_config.py
datasets/cloud/: surrogates_config.py
datasets/cloud_parametric/: surrogates_config.py  (+1 more)
docs/: README.md  TODO.md  _config.yml  benchmark.html  codes.benchmark.rst  codes.rst  conf.py  config.html  documentation.html  index.html  index.rst  index_old.html  mkdocs.yml  modules.rst
optuna_runs/: __init__.py  evaluate_study.py  evaluate_study_2.py  optuna_fcts.py
site/: 404.html  index.html  search.html
study/: end_to_end.db
surrogates/: __init__.py  surrogate.py  surrogate_classes.py  surrogates.py
test/: README.md  conftest.py  pytest.ini  test_bench_compare.py  test_bench_main.py  test_bench_modalities.py  test_bench_utils.py  test_data.py  test_datasets.py  test_eval_pipeline.py  test_model_comparison.py  test_postgres_utils.py  test_surrogate_models.py  test_surrogates.py  test_training_pipeline.py  test_tuning_pipeline.py  test_utils.py
train/: __init__.py  train_fcts.py
utils/: __init__.py  utils.py
(+317 files in other folders)
