[project]
name = "codes-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.9.0",
    "matplotlib>=3.8.4",
    "numpy>=1.26.4",
    "optuna>=4.3.0",
    "optuna-dashboard>=0.17.0",
    "psycopg2-binary>=2.9.10",
    "pyyaml>=6.0.1",
    "schedulefree>=1.4.1",
    "scipy>=1.14.1",
    "sqlalchemy>=2.0.41",
    "tabulate>=0.9.0",
    "torch>=2.3.0",
    "torchode>=1.0.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-book-theme>=1.1.4",
    "sphinxcontrib-napoleon>=0.7",
]
