[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codes"
version = "0.1.0"
description = "Benchmarking tool for coupled ODE surrogate models"
authors = [
    { name = "Robin Janssen", email = "sy192@uni-heidelberg.de" },
    { name = "Immanuel Sulzer"}
]
license = "GPL-3.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.14.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "optuna>=4.4.0",
    "optuna-dashboard>=0.19.0",
    "psycopg2-binary>=2.9.10",
    "pyyaml>=6.0.2",
    "schedulefree>=1.4.1",
    "scipy>=1.15.3",
    "sqlalchemy>=2.0.41",
    "tabulate>=0.9.0",
    "torch>=2.7.1",
    "torchode>=1.0.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "myst-nb>=1.1.0",
    "linkify-it-py>=2.0.2",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-book-theme>=1.1.4",
    "sphinxcontrib-napoleon>=0.7",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
packages = ["codes"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.coverage.run]
source = ["codes"]
omit = ["*/tests/*", "*/test_*", "*/bench_plots.py", "*/__init__.py", "*/evaluate_study.py", "*/evaluate_tuning.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
